# WB_Hometasks

./: README.md
Python homework № 2/: Python_homework_2.ipynb  pyproject.toml
Python homework № 3/: pyproject.toml  python_homework_3.ipynb
home_task_python_1/: Home_task_1.ipynb  README.md  pyproject.toml
