[tool.poetry]
name = "home-task"
version = "0.1.0"
description = ""
authors = ["Capsize7 <dnbforever7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
numpy = "^1.26.0"
pandas = "^2.1.1"
jupyterlab = "^4.0.6"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
